<resources>
    <string name="app_name">Tuto Java</string>
    <string name="btn_main">OK</string>
    <string name="btn2_main">Page 2</string>

    <!-- TextViews -->
    <string name="tv_main_firstname">Firstname :</string>
    <string name="tv_main_lastname">Lastname :</string>
    <string name="tv_main_age">Age :</string>

    <!-- Placeholders -->
    <string name="ph_firstname">Firstname</string>
    <string name="title_activity_calculator">CalculatorActivity</string>

    <!-- Main2 -->
    <string name="tv_main2">2nd Activity</string>
    <string name="btn_main2">Back</string>

    <!-- Create Country Activity-->
    <string name="cca_button_validate">Validate</string>
    <string name="cca_title">New country</string>
    <string name="cca_ph_country_name">Name</string>
    <string name="cca_ph_country_url">Url of picture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fg_static_2">Mon Fragment 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tv_fg_act">Choose a fragment to display </string>
    <string name="buttonGreen">Green Fragment</string>
    <string name="buttonPink">Pink Fragment</string>
    <string name="fg_green_title">Green Fragment dynamic Title</string>
    <string name="tv_fg_pink">Pink Fragment Static Title</string>
    <string name="btn_fg_pink">Show Toast on Activity</string>
    <string name="fg_pink_message">Message from pink fragment</string>



</resources>
