<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bg_blue"
    >


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="179dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/business_avatar" />

    <EditText
        android:id="@+id/et_main_age"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_main_lastname"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/et_main_age"

         />

    <EditText
        android:id="@+id/et_main_firstname"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:hint="@string/ph_firstname"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/et_main_lastname"

        />

    <TextView
        android:id="@+id/tv_main_firstname"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/tv_main_firstname"
        android:textSize="12pt"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/et_main_firstname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_main_lastname"

        />

    <TextView
        android:id="@+id/tv_main_lastname"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="12pt"
        android:textStyle="bold"
        android:text="@string/tv_main_lastname"
        android:gravity="center"

        app:layout_constraintEnd_toStartOf="@+id/et_main_lastname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_main_age"
        tools:layout_editor_absoluteY="312dp" />

    <TextView
        android:id="@+id/tv_main_age"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="12pt"
        android:textStyle="bold"
        android:text="@string/tv_main_age"
        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/et_main_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_main_age" />

    <Button
        android:id="@+id/btn2_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn2_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_main" />

</androidx.constraintlayout.widget.ConstraintLayout>