<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCountryActivity">


    <TextView
        android:id="@+id/cca_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cca_title"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cca_input_country_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cca_ph_country_name"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@+id/cca_title" />

    <EditText
        android:id="@+id/cca_input_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cca_ph_country_url"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@+id/cca_input_country_name" />

    <Button
        android:id="@+id/cca_button_validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cca_button_validate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/cca_input_url" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_item_rv_country"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toEndOf="@+id/cca_input_url"
        app:layout_constraintTop_toBottomOf="@+id/cca_input_country_name"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>